# aed-2025-1

./: .gitignore  CMAKE.txt  CMakeLists(O melhor).txt  CMakeLists.txt  COMO-RODAR-O-CODIGO.txt  README.md  README_ANTIGO.md  SORTS.txt  aed.code-workspace
inc/: elemento.h
inc/aloc_encadeada/: deque.h  fila.h  fila_encadeada.h  lista_duplamente_encadeada.h  lista_duplamente_encadeada_circular.h  lista_simplesmente_encadeada.h  pilha.h  pilha_encadeada.h
inc/aloc_sequencial/: fila.h  lista_nao_ordenada.h  lista_ordenada.h  pilha.h
inc/arvore/: arvore_binaria.h  arvorebin.h
inc/sorts/: sorts.h
includes/: elemento.h
includes/aloc_sequencial/: lista_nao_ordenada.h
includes/sorts/: sorts.h
src/: CMakeLists.txt  elemento.cpp  main.cpp
src/aloc_encadeada/: deque.cpp  fila.cpp  fila_encadeada.cpp  lista_duplamente_encadeada.cpp  lista_duplamente_encadeada_circular.cpp  lista_simplesmente_encadeada.cpp  pilha.cpp  pilha_encadeada.cpp
src/aloc_sequencial/: fila.cpp  lista_nao_ordenada.cpp  lista_ordenada.cpp  pilha.cpp
src/arvore/: arvore_binaria.cpp  arvorebin.cpp
src/sorts/: sorts.cpp
